fixed spacing & alignment issues on red-recordingprep & red-recordyourstory

--- a/blocks/dyncontent/dyncontent.css
+++ b/blocks/dyncontent/dyncontent.css
@@ -11,3 +11,11 @@
     margin-left: 10%;
     margin-right: 10%;
 } 
+
+.red-four .dyncontent {
+    width: 0;
+}
+
+.red-four .dyncontent-wrapper {
+    margin-top: 28.3%;
+}
