--- a/styles/styles.css
+++ b/styles/styles.css
@@ -275,7 +275,6 @@ header, footer, .blue-two, .blue-three, .green-one, .green-two, .green-three, .r
 }
 
 #like-these-icons-our-heroes-stories-are-woven-into-the-fabric-of-our-lives {
-  padding-top: 16%;
   margin-block-start: 0;
   margin-block-end: 0;
 }
@@ -316,8 +315,7 @@ header, footer, .blue-two, .blue-three, .green-one, .green-two, .green-three, .r
   font-weight: 400;
   line-height: 26px;
   padding-top: 5%;
-  max-width: 60%;
-  width: 87%;
+  width: 63%;
 }
 .green-two h4, .red-two h4 {
   display: none;
